# auto-CMake

./: .gitignore  CMakeLists.txt  README.md
.auto-cmake/: cmake_git.cmake  cmake_lazy_testing_targets.cmake  configure.cmake  find_lib.cmake  language.cmake  lazy-test-cache.py  linker_map.cmake  rings.cmake  sources.cmake  utils.cmake
.auto-cmake/core/: core.cmake  header.cmake
.auto-cmake/scripts/: add_size.py
auto-cmake.conf/: conf.cmake  rings_order.cmake
auto_cmake_test/: integration_test.py  test.sh
build-helpers/: .cmake_dependencies_set_up.swp  cmake_dependencies_set_up  cmake_dependencies_set_up.cmake  cmake_git  cmake_lazy_testing_targets  cmake_lazy_testing_targets.cmake  cmakefunc  cmakefunc.cmake  globe.cmake  lazy-test-cache.py  rings.cmake  sources.cmake
build-helpers/configure/: .CMakeLists.txt.swp  CMakeLists.txt
build-helpers/configure/root/test/data/results/: configure_test
build-helpers/scripts/: add_size.py
code/: CMakeLists.txt
code/entry/: CMakeLists.txt  exec1.c  exec2.c
code/src/: CMakeLists.txt
code/src/sub/: int_src.h
code/src/sub/c/: int_src.c
dev/: post-commit.bash  pre-commit.bash  protected-branchs
dev/.githooks/: .post-commit  .pre-commit  .pre-push  shareHooks.bash
dev/push_release_to_master/: README.md.cmake_template  push_to_master.py
fscmake-test/: integration_test.py
opt/handCraftedUtilityShit/user_land_loader/build-helpers/configure/: .CMakeLists.txt.swp  CMakeLists.txt
perf/: CMakeLists.txt
perf/data/results/: history.kvhf
perf/data/results/test/: E  S
perf/entry/: CMakeLists.txt  empty.c  test.c
perf/needed/: CMakeLists.txt
perf/src/: CMakeLists.txt
perf/src/sub/: shared_perf.h
perfs/: CMakeLists.txt
rings/code/: CMakeLists.txt
rings/code/entry/: exec1.c  exec2.c
rings/code/src/: CMakeLists.txt
rings/code/src/share_lib/: another_lib.c
rings/code/src/sub/c/: int_src.c
rings/perf/: CMakeLists.txt
rings/perf/data/: perf-empty  perf-empty2
rings/perf/data/results/: all.kvf
rings/perf/data/results/empty/: E
rings/perf/data/results/empty2/: E
rings/perf/data/results/kvf/: perf-empty.kvf  perf-empty2.kvf  size_exec1.kvf  size_perf-empty.kvf
rings/perf/data/results/perf-empty/: E  S
rings/perf/data/results/perf-empty2/: E  S
rings/perf/entry/: CMakeLists.txt  empty.c  empty2.c
rings/perf/needed/: CMakeLists.txt
rings/perf/src/: shared_perf.c
rings/test/: CMakeLists.txt
rings/test/data/: test-got_munit  test-monkeypatching  test-monkeypatching_temoin_WF  test-test_sys_lib
rings/test/data/results/: .gitkeep
rings/test/entry/: CMakeLists.txt  sub_lib.c
rings/test/needed/: CMakeLists.txt
rings/test/src/: CMakeLists.txt  shared_test.c
test/: CMakeLists.txt  README.md  TODO
test/entry/: CMakeLists.txt  got_munit.c  monkeypatching.c  monkeypatching_temoin_WF.c  test1.c  test2.c  test3_WF.c  test_sys_lib.c
test/needed/: CMakeLists.txt
test/src/: CMakeLists.txt
test/src/sub/: shared_test.h
